<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindow">

    <com.zm.secretsign.view.RatioImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/beijintu"
        app:height_to_width_ratio="0.67" />

    <com.zhou.library.utils.statusbarUtils.StatusBarHeightView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:use_type="use_padding_top">

        <TextView
            android:id="@+id/tv_title"
            style="@style/tv_white_16"
            android:paddingRight="@dimen/dp_30"
            android:paddingLeft="@dimen/dp_24"
            android:paddingTop="@dimen/dp_35"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/update_password"
            android:drawablePadding="@dimen/dp_10"
            android:drawableLeft="@drawable/daorusiyao"
            android:textSize="@dimen/sp_24" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@drawable/bg_pop"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_29"
            android:paddingTop="@dimen/dp_20"
            android:paddingRight="@dimen/dp_29"
            android:paddingBottom="@dimen/dp_30">

            <EditText
                android:id="@+id/et_pwd_current"
                style="@style/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_5"
                android:hint="@string/input_password_current_please"
                android:padding="@dimen/dp_16" />

            <View style="@style/base_line" />


            <EditText
                android:id="@+id/et_pwd"
                style="@style/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_5"
                android:hint="@string/input_password_new_please"
                android:padding="@dimen/dp_16" />

            <View style="@style/base_line" />


            <EditText
                android:id="@+id/et_pwd_again"
                style="@style/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_5"
                android:hint="@string/input_password_new_again_please"
                android:padding="@dimen/dp_16" />

            <View style="@style/base_line" />

            <TextView
                android:id="@+id/tv_login"
                style="@style/bt_theme_circle"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_16"
                android:text="@string/sure" />

            <TextView
                style="@style/tv_gray_12"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/safekeeping_password" />

        </LinearLayout>

        <TextView
            style="@style/tv_gray_12"
            android:layout_below="@+id/ll_center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_15"
            android:text="@string/login_problems" />

    </com.zhou.library.utils.statusbarUtils.StatusBarHeightView>

</RelativeLayout>