<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_pop"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                style="@style/tv_dark_16"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_32"
                android:lineSpacingExtra="@dimen/dp_14"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                android:singleLine="false"
                android:text="@string/statement_name" />


            <TextView
                android:id="@+id/tv_content"
                style="@style/tv_dark_16"
                android:lineSpacingExtra="@dimen/dp_6"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                android:singleLine="false"
                android:text="@string/statement" />

        </LinearLayout>


    </ScrollView>

    <RelativeLayout
        android:id="@+id/ll_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16">

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/bt_theme_circle"
            android:background="@drawable/circle_line_orange"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/dp_30"
            android:paddingRight="@dimen/dp_30"
            android:text="@string/disagree" />

        <TextView
            android:id="@+id/tv_confirm"
            style="@style/bt_theme_circle"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingLeft="@dimen/dp_30"
            android:paddingRight="@dimen/dp_30"
            android:text="@string/agree" />

    </RelativeLayout>

</LinearLayout>